# OrdersParserByDK

./: .gitignore  Makefile  README.md  amazon_parser.py  etsy_parser.py  gdrive_finder.py  gsheet_writer.py  main.py  main_cli.py  orders.txt  pyproject.toml  requirements.txt
.github/workflows/: build.yml
config/: settings.py
core/: cli.py  console.py  constants.py  dispatcher.py  i18n.py  paths.py  processor.py
google_api/: auth.py  gdrive_finder.py  gsheet_writer.py
marketplaces/: amazon_parser.py  base_parser.py  ebay_parser.py  etsy_parser.py  overstock_parser.py  wayfair_parser.py
tests/: conftest.py  test_base_parser.py  test_console_capture.py  test_dispatcher.py  test_gsheet_builders.py  test_gsheet_writer.py  test_i18n.py  test_log_cleanup.py  test_log_format.py  test_processor.py  test_sheet_selection.py
ui/: app.py  backend.py  log_format.py
ui/i18n/: app_ru.qm  app_ru.ts  app_uk.qm  app_uk.ts
ui/qml/: Main.qml
ui/qml/components/: HeaderBar.qml  LaunchPanel.qml  LogBannerDelegate.qml  LogDoneDelegate.qml  LogFieldDelegate.qml  LogNoteDelegate.qml  LogPanel.qml  LogPlainDelegate.qml  LogProblemDelegate.qml  NotificationPopup.qml  OrdersPanel.qml  PastePanel.qml  StatCard.qml  SummaryBar.qml  Theme.qml  qmldir
